--- a/app/views/friend_requests/new.html.erb
+++ b/app/views/friend_requests/new.html.erb
@@ -19,13 +19,7 @@
       <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
 
       <!-- Label and input for sender -->
-      <div class="form-group">
-        <label for="sender" class="control-label">
-          Sender
-        </label>
-
-        <%= select_tag(:sender, options_from_collection_for_select(User.all, :id, :email, @friend_request.sender), :class => "form-control") %>
-      </div>
+      <input type="hidden" name="sender" value="<%= current_user.id %>">
 
       <!-- Label and input for recipient -->
       <div class="form-group">
