--- a/app/views/friend_requests/edit.html.erb
+++ b/app/views/friend_requests/edit.html.erb
@@ -21,13 +21,13 @@
       
       
 
-      <!-- Label and input for recipient -->
+      <!-- Label and input for recipient_id -->
       <div class="form-group">
-        <label for="recipient" class="control-label">
+        <label for="recipient_id" class="control-label">
           Recipient
         </label>
 
-        <%= select_tag(:recipient, options_from_collection_for_select(User.all, :id, :email, @friend_request.recipient), :class => "form-control") %>
+        <%= select_tag(:recipient_id, options_from_collection_for_select(User.all, :id, :email, @friend_request.recipient_id), :class => "form-control") %>
       </div>
 
       <button class="btn btn-warning">
