--- a/app/views/friend_requests/show.html.erb
+++ b/app/views/friend_requests/show.html.erb
@@ -8,7 +8,7 @@
       <dt>Sender</dt>
       <dd>
         <% if @friend_request.sender.present? %>
-          <a href="/users/<%= @friend_request.sender %>">
+          <a href="/users/<%= @friend_request.sender_id %>">
             <%= @friend_request.sender.email %>
           </a>
         <% end %>
@@ -17,7 +17,7 @@
       <dt>Recipient</dt>
       <dd>
         <% if @friend_request.recipient.present? %>
-          <a href="/users/<%= @friend_request.recipient %>">
+          <a href="/users/<%= @friend_request.recipient_id %>">
             <%= @friend_request.recipient.email %>
           </a>
         <% end %>
